University_system/force-app/main/default/objects/Student__c/fields/Co_living__c.field-meta.xml
<CustomField>
    <fullName>Co_living__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Co-living</label>
    <type>Checkbox</type>
</CustomField>