University_system/force-app/main/default/objects/Student__c/fields/Format_of_education__c.field-meta.xml
<CustomField>
    <fullName>Format_of_education__c</fullName>
    <label>Format of education</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full time</fullName>
                <default>true</default>
                <label>Full time</label>
            </value>
            <value>
                <fullName>Distance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>