University_system/force-app/main/default/objects/Student__c/fields/Grand__c.field-meta.xml
<CustomField>
    <fullName>Grand__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do you student study for money or by grand</description>
    <label>Grand</label>
    <type>Checkbox</type>
</CustomField>