University_system/force-app/main/default/objects/Student__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <length>5</length>
    <type>Text</type>
</CustomField>